# nested_learning

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  train.py
.github/workflows/: release.yml
configs/: pilot.yaml
docs/: DEVELOPMENT.md  PACKAGE_RELEASE_CHECKLIST.md  PROJECT.md  PYPI_TRUSTED_PUBLISHING.md
scripts/: run_smoke.sh
src/nested_learning/: __init__.py  api.py  checkpoint.py  cli.py  config_utils.py  factory.py  inference.py  trainer.py  training.py
